Fix PMD warnings (#104)
* Fix PMD warnings

* Add pmd to .idea